--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "material-ui": "^0.15.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-router": "^2.5.2",
     "react-tap-event-plugin": "^1.0.0"
   },
   "devDependencies": {
